Edited wiki page Tutorial through web user interface.

--- a/wiki/Tutorial.wiki
+++ b/wiki/Tutorial.wiki
@@ -20,7 +20,7 @@ After unzipping the archive you should have the following files:
 
 = Tutorial Gowinda =
 
-== Unique genes; SNPs may be in exons or introns ==
+== Example 1: Basic analysis ==
 
 First we test whether the candidate SNPs show any enrichment for any GO category when counting every gene only once (`--mode gene`). Furthermore we want a SNP to be associated with a gene if the SNP position is within one of the exons or introns of the gene (`--gene-definition gene`). Furthermore to speed up the tutorial we use 8 threads for the simulations and only perform 100.000 simulations.
 {{{
@@ -41,7 +41,7 @@ Please see the manual for a detailed description of the output: http://code.goog
 
 However, in this example with an FDR <0.05 no GO categories show a significant enrichment.
 
-== Unique genes; SNPs may also be in regulatory regions upstream and downstream of a gene ==
+== Example 2: Including regulatory regions ==
 In the previous analysis only SNPs within exons or introns were associated with a gene. For the next analysis we additionally want to include 2000 bp upstream and 2000 bp downstream of a gene (`--gene-definition updownstream2000`) into the analysis in order to account for regulatory regions.
 
 {{{
@@ -57,7 +57,7 @@ GO:0016830      0.370   3       0.0048500000    0.8419150000    3       6       
 GO:0007349      3.040   8       0.0048600000    0.8419150000    8       24      91      cellularization cg9506,cg13263,cg14472,cg10728,cg8049,cg5020,cg17161,cg6137
 }}}
 
-== Multiple counts for a gene; Including regulatory region ==
+== Example 3: high resolution GO term enrichment ==
 As we are getting quite desperate now and we know that linkage disequilibrium is decaying quite rapidly in our organism we want to perform a higher resolution analysis in which genes may be counted several times, dependent on the number of candidate SNPs found in a gene (`--mode snp`). For example a gene containing 5 candidate SNPs is counted 5 times. This is of course also true in the simulations, a gene with 5 random SNPs will also be counted 5 times.
 
 {{{
