--- a/wiki/Tutorial.wiki
+++ b/wiki/Tutorial.wiki
@@ -5,6 +5,7 @@
 = Introduction =
 The following section provides a quick and fast introduction into the analysis of GO term enrichment with Gowinda. For the sake of this tutorial we provide a small artificial data set from _Drosophila melanogaster_ chromosome 2R. In these sample data we identified 348.701 SNPs and a GWAS-like study showed that 279 of those are associated with the trait of interest, lets say wing length. Furthermore the dataset contains an annotation of _D. melanogaster_ from !FlyBase and the GO associations from !FuncAssociate2. In the following section we demonstrate how to test, whether our set of candidate SNPs shows a significant enrichment for any GO terms. 
 
+
 = Data =
 == Tutorial Gowinda ==
 The following sample data set contains SNPs, annotation and the GO associations for _D.melanogaster_ chromosome arm 2R. 
@@ -19,6 +20,8 @@ After unzipping the archive you should have the following files:
 
 
 = Tutorial Gowinda =
+
+*NOTE:* Please follow the examples in the given order
 
 == Example 1: Basic analysis ==
 
