Edited wiki page Manual through web user interface.

--- a/wiki/Manual.wiki
+++ b/wiki/Manual.wiki
@@ -189,11 +189,17 @@ GO:0000003_reproduction	FBGN0016053	137	137	1.000000	0.000000	4633	4633.0	1.0000
 GO:0000003_reproduction	FBGN0011236	137	137	1.000000	0.000000	4633	4633.0	1.000000
 GO:0000003_reproduction	FBGN0005655	137	137	1.000000	0.000000	4633	4633.0	1.000000
 GO:0000003_reproduction	FBGN0034430	137	137	1.000000	0.000000	4633	4633.0	1.000000
-
 }}}
 
 Following an example of the resulting GO assocation file
 {{{
+GO:0030381      chorion-containing_eggshell_pattern_formation   FBGN0003731 FBGN0015754 FBGN0004400 FBGN0003733
+GO:0045887      positive_regulation_of_synaptic_growth_at_neuromuscular_junction        FBGN0003317
+GO:0005795      Golgi_stack     FBGN0033500 FBGN0027558 FBGN0034697 FBGN0034025 FBGN0033339
+GO:0034660      ncRNA_metabolic_process FBGN0034401 FBGN0028426 FBGN0034177 FBGN0003062 FBGN0034735 FBGN0026722 FBGN0033741 FBGN0002069 FBGN0035064 FBGN0262560 FBGN0033454 
+FBGN0053505 FBGN0033375 FBGN0020766 FBGN0033900 FBGN0027091 FBGN0027079 FBGN0028744 FBGN0259937 FBGN0011824
+GO:0042826      histone_deacetylase_binding     FBGN0033748
+GO:0043139      5'-3'_DNA_helicase_activity     FBGN0261850
 }}}
 
 The parameters of this script are:
